--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
             const message = `សូមអបអរសាទរដល់គូស្វាមីភរិយាថ្មី!🤵👰\n\nពី៖ ${name}\n\n"${wish}"`;
 
             // Construct the Telegram URL to open a specific chat
-            const telegramUrl = `https://t.me/samnangkhiev?text=${encodeURIComponent(message)}`;
+            const telegramUrl = `https://t.me/hengpov1122?text=${encodeURIComponent(message)}`;
 
             // Open the URL in a new tab
             window.open(telegramUrl, '_blank');
@@ -312,4 +312,5 @@
     </script>
 </body>
 </html>
+
 
